<resources>
    <string name="app_name">하우스마트</string>

    //activity_chat_list.xml
    <string name="chat_list_title">채팅 목록</string>
    <string name="chat_list_search_hint">검색</string>

    //activity_chat.xml
    <string name="chat_search_hint">대화 내용 검색</string>
    <string name="chat_hint">메시지를 입력하세요</string>
    <string name="chat_write_contract">가계약서 쓰기</string>
    <string name="chat_read_contract">가계약서 보기</string>
    <string name="chat_contract">계약하기</string>
    <string name="chat_phase">자주쓰는 문구</string>
    <string name="chat_album">앨범</string>
    <string name="chat_camera">카메라</string>
    <string name="chat_call">전화하기</string>

    //UploadActivity
    <string name="living">거실테스트</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>