<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chat_option"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@color/chat_background">

    <ImageView
        android:id="@+id/chat_write_contract"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/chat_read_contract"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:src="@drawable/write_report"
        android:background="@drawable/contract_customblue_circle"/>

    <TextView
        android:id="@+id/chat_txt_write_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_write_contract"
        app:layout_constraintRight_toRightOf="@id/chat_write_contract"
        app:layout_constraintTop_toBottomOf="@id/chat_write_contract"
        android:layout_marginTop="5dp"
        android:text="@string/chat_write_contract"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/chat_read_contract"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toRightOf="@id/chat_write_contract"
        app:layout_constraintRight_toLeftOf="@id/chat_contract"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:src="@drawable/report_2"
        android:background="@drawable/contract_lightblue_circle"/>

    <TextView
        android:id="@+id/chat_txt_read_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_read_contract"
        app:layout_constraintRight_toRightOf="@id/chat_read_contract"
        app:layout_constraintTop_toBottomOf="@id/chat_read_contract"
        android:layout_marginTop="5dp"
        android:text="@string/chat_read_contract"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/chat_contract"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toRightOf="@id/chat_read_contract"
        app:layout_constraintRight_toLeftOf="@id/chat_call"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:src="@drawable/contract"
        android:background="@drawable/contract_bluegreen_circle"/>

    <TextView
        android:id="@+id/chat_txt_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_contract"
        app:layout_constraintRight_toRightOf="@id/chat_contract"
        app:layout_constraintTop_toBottomOf="@id/chat_contract"
        android:layout_marginTop="5dp"
        android:text="@string/chat_contract"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/chat_call"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toRightOf="@id/chat_contract"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:src="@drawable/call"
        android:background="@drawable/contract_green_circle"/>

    <TextView
        android:id="@+id/chat_txt_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_call"
        app:layout_constraintRight_toRightOf="@id/chat_call"
        app:layout_constraintTop_toBottomOf="@id/chat_call"
        android:layout_marginTop="5dp"
        android:text="@string/chat_call"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/chat_album"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="@id/chat_txt_write_contract"
        app:layout_constraintRight_toRightOf="@id/chat_txt_write_contract"
        app:layout_constraintTop_toBottomOf="@id/chat_txt_write_contract"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/album"
        android:background="@drawable/contract_blue_circle"/>

    <TextView
        android:id="@+id/chat_txt_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_album"
        app:layout_constraintRight_toRightOf="@id/chat_album"
        app:layout_constraintTop_toBottomOf="@id/chat_album"
        android:layout_marginTop="5dp"
        android:text="@string/chat_album"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/chat_camera"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="@id/chat_txt_read_contract"
        app:layout_constraintRight_toRightOf="@id/chat_txt_read_contract"
        app:layout_constraintTop_toBottomOf="@id/chat_txt_read_contract"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:src="@drawable/camera"
        android:background="@drawable/contract_purple_circle"/>

    <TextView
        android:id="@+id/chat_txt_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_camera"
        app:layout_constraintRight_toRightOf="@id/chat_camera"
        app:layout_constraintTop_toBottomOf="@id/chat_camera"
        android:layout_marginTop="5dp"
        android:text="@string/chat_camera"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/chat_phase"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="@id/chat_txt_contract"
        app:layout_constraintRight_toRightOf="@id/chat_txt_contract"
        app:layout_constraintTop_toBottomOf="@id/chat_txt_contract"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:src="@drawable/phase"
        android:background="@drawable/contract_brown_circle"/>

    <TextView
        android:id="@+id/chat_txt_phase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/chat_phase"
        app:layout_constraintRight_toRightOf="@id/chat_phase"
        app:layout_constraintTop_toBottomOf="@id/chat_phase"
        android:layout_marginTop="5dp"
        android:text="@string/chat_phase"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>